--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head{
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+    margin: 0;
 }
+.App{
+    text-align: center;
+    /* color: white; */
+    min-height: 100vh;
+    background: #000;
+}
+.header{
+    background: rgb(0, 0, 0);
+    color: rgb(255, 0, 0);
+    padding: 8px;
+}
+.main {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 14px;
+   gap: 7px;
+}
+.movie{
+width: 23%;
+color: #e7be00;
+    background: rgb(0, 0, 0);
+    border: 1px solid rgb(255, 0, 0);
+    padding: 3px;
+    /* font-weight: bold; */
+    font-size: 15px;
+    text-align: start;
+    width: 200px;
+}
+.movieTitle{
+    font-size: 20px;
+    font-weight: bold;
+}
+.movieYear{
+    font-size:large ;
+    font-weight: bold;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.movie img {
+    width: 100%;
+height:  250px;
+border: 1px solid #5d5763;}
